--- a/.github/workflows/snowflake-terraform-demo-prod.yml
+++ b/.github/workflows/snowflake-terraform-demo-prod.yml
@@ -10,6 +10,11 @@ jobs:
   deploy-terraform-prod:
     name: "Deploy Terraform plan on Prod"
     runs-on: ubuntu-latest
+    env:
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     permissions:
       pull-requests: write
     steps:
