--- a/.github/workflows/snowflake-terraform-demo-staging.yml
+++ b/.github/workflows/snowflake-terraform-demo-staging.yml
@@ -9,6 +9,11 @@ jobs:
   deploy-terraform-staging:
     name: "Plan & Deploy Terraform plan on Staging"
     runs-on: ubuntu-latest
+    env:
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     permissions:
       pull-requests: write
     steps:
