--- a/.github/workflows/snowflake-terraform-demo-prod.yml
+++ b/.github/workflows/snowflake-terraform-demo-prod.yml
@@ -31,7 +31,11 @@ jobs:
       - name: Terraform Validate
         id: validate
         run: terraform -chdir=./prod validate -no-color
-
+      
+      - name: Terraform Import
+        id: import
+        run: terraform -chdir=./prod import module.snowflake_resources.snowflake_storage_integration.integration AR_AZURE_INT; terraform -chdir=./prod import module.snowflake_resources.snowflake_notification_integration.integration MY_NOTIFICATION_INTEGRATION
+        
       - name: Terraform Plan on Prod for PR
         id: plan
         if: github.event_name == 'pull_request'
