--- a/.github/workflows/snowflake-terraform-demo-prod.yml
+++ b/.github/workflows/snowflake-terraform-demo-prod.yml
@@ -36,7 +36,7 @@ jobs:
         id: import
         run: |
               chmod +x ./import_script.sh;
-              ./import_script.sh
+              ./import_script.sh prod
         env:
           TF_VAR_snowflake_private_key: ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
 
